migrate AsyncUraTripReader to Java 11 HttpClient with custom subscriber
Instead of reading the InputStream we now use a custom line subscriber
which asynchronously processes each JSON line from the response.